--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,8 +20,8 @@
        - name: Login to DockerHub
          uses: docker/login-action@v2
          with:
-           username: ${{ secrets.DOCKERHUB_USERNAME }}
-           password: ${{ secrets.DOCKERHUB_TOKEN }}
+           username: ${{ secrets.DOCKERHUB_USER }}
+           password: ${{ secrets.DOCKERHUB_PASSWORD }}
        - name: Build and push
          uses: docker/build-push-action@v3
          with:
