--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@
          uses: docker/build-push-action@v3
          with:
            push: true
-           tags: jonah1024/ohif-viewer-v3:latest
+           tags: jonah1024/ohif-viewer:v3-stable
