--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,16 +1,14 @@
  name: Docker Image Build and Push
  on:
    workflow_dispatch:
-   push:
-     branches: ['master']
  jobs:
    docker:
      runs-on: ubuntu-latest
      steps:
        - name: Checkout repository
          uses: actions/checkout@v3
-         with:
-           ref: v3-stable
+         # with:
+         #  ref: v3-stable
        - name: Set up QEMU
          uses: docker/setup-qemu-action@v2
          with:
