--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,5 +23,6 @@
        - name: Build and push
          uses: docker/build-push-action@v3
          with:
+           context: .
            push: true
            tags: jonah1024/ohif-viewer:v3-stable
