Update docker-image.yml v3-stable

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,8 +7,8 @@
      steps:
        - name: Checkout repository
          uses: actions/checkout@v3
-         # with:
-         #  ref: v3-stable
+         with:
+           ref: v3-stable
        - name: Set up QEMU
          uses: docker/setup-qemu-action@v2
          with:
