Update docker-image.yml push test 2

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,5 +26,7 @@
          uses: docker/build-push-action@v4
          with:
            context: .
+           file: ./Dockerfile
+           platforms: linux/arm64
            push: true
            tags: jonah1024/ohif-viewer:v3-stable
