--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,4 @@
            file: ./Dockerfile
            platforms: linux/arm64
            push: true
-           tags: jonah1024/ohif-viewer:v3-stable
+           tags: jonah1024/ohif-viewer:v3-stable-arm
